Close Camel context after test (#394)